--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.4",
+    "graphql-iso-date": "^3.6.1",
     "react": "^16.9.0",
     "react-apollo": "^3.1.0",
     "react-dom": "^16.9.0",
+    "react-notify-toast": "^0.5.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1",
     "recompose": "^0.30.0"
   },
