--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,15 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "vinod Chauhan",
+    "author": "Monika",
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-graphql": "^0.9.0",
         "graphql": "^14.5.4",
+        "graphql-date": "^1.0.3",
+        "graphql-iso-date": "^3.6.1",
         "lodash": "^4.17.15",
         "mongoose": "^5.6.13"
     }
