--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,9 +10,13 @@
     "react-apollo": "^3.1.0",
     "react-dom": "^16.9.0",
     "react-notify-toast": "^0.5.1",
+    "react-responsive-modal": "^6.0.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
